tests/snapshots/runtime_error_fixtures/either_boundary_string_into_either.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/either_boundary_string_into_either.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  IO
[3 of 8] Compiling  List
[4 of 8] Compiling  Numeric
[5 of 8] Compiling  Option
[6 of 8] Compiling  String
[7 of 8] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/either_boundary_string_into_either.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `unwrap_or_zero`.

  examples/runtime_errors/either_boundary_string_into_either.flx:12:16
   |
 3 | fn unwrap_or_zero(input: Either<String, Int>) -> Int {
 4 |     match input {
 5 |         Left(_msg) -> 0,
 6 |         Right(value) -> value,
 7 |         _ -> 0
 8 |     }
 9 | }
10 |
11 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
12 | unwrap_or_zero(dynamic)
   |                ^^^^^^^
   |                ------- this argument has type `String`

Note:
  expected argument type: Either<String, Int>
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Either<String, Int>` value as the 1st argument.
== jit ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  IO
[3 of 8] Compiling  List
[4 of 8] Compiling  Numeric
[5 of 8] Compiling  Option
[6 of 8] Compiling  String
[7 of 8] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/either_boundary_string_into_either.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `unwrap_or_zero`.

  examples/runtime_errors/either_boundary_string_into_either.flx:12:16
   |
 3 | fn unwrap_or_zero(input: Either<String, Int>) -> Int {
 4 |     match input {
 5 |         Left(_msg) -> 0,
 6 |         Right(value) -> value,
 7 |         _ -> 0
 8 |     }
 9 | }
10 |
11 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
12 | unwrap_or_zero(dynamic)
   |                ^^^^^^^
   |                ------- this argument has type `String`

Note:
  expected argument type: Either<String, Int>
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Either<String, Int>` value as the 1st argument.
